--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "luxon": "^2.0.1",
     "next": "11.0.1",
     "react": "17.0.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.0"
