--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
+    "react-data-table-component": "^7.0.0-rc2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.0"
   },
